Fix toolbar display on Safari. It was overlapped with page title.
git-svn-id: https://repo.socialtext.net:8999/svn/socialtext/trunk@11750 593ce9bc-2028-0410-bb98-c566b643a948

--- a/nlw/share/skin/s3/css/screen.css
+++ b/nlw/share/skin/s3/css/screen.css
@@ -707,7 +707,6 @@ div#bootstrap-loader {
 /* pagetools : the top right New Page, Print, Email, and Tools items at top right */
 
 #st-page-editing-toolbar {
-    float: left;
     margin: 0 250px -24px 0;
 }
 #wikiwyg_toolbar {
